Migrate scalding from scalariform to scalafmt  (#1953)